--- a/index.html
+++ b/index.html
@@ -4,32 +4,26 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>recipe-tube</title>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|EB+Garamond" rel="stylesheet" type="text/css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Dancing+Script:400,700|EB+Garamond" rel="stylesheet" type="text/css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="compiled/css/style.css">
 </head>
 
 <body>
   <div class="container">
-    <article class="main">
-      <section class="center">
-        <p>Category</p>
+    <nav>
+      <img class="logo" src="img/restaurant-cutlery.svg" alt="logo">
+      <h1 class="nav-title">Recipe-Tube!</h1>
+    </nav>
+    <main>
+      <section class="info">
+        <h1>Discover Recipes</h1>
+        <p class="sub-title">With printed ingredients, instructions and video!</p>
+        <p class="sub-title2">Recent entries:</p>
       </section>
-    </article>
-    <aside class="aside-1">
-      <header>
-        <h1>Header</h1>
-      </header>
-      Left
-    </aside>
-    <aside class="aside-2">
-      Right
-    </aside>
-    <footer class="footer">
-      Footer
-    </footer>
+    </main>
   </div>
 
   <script src="//code.jquery.com/jquery.min.js"></script>
