add recent videos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <p class="sub-title">With printed ingredients, instructions and video!</p>
         <p class="sub-title2">Recent entries:</p>
       </section>
+      <main class="content">
+      <section class="recent-videos">
+        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+      </section>
+      </main>
     </main>
   </div>
 
