--- a/index.html
+++ b/index.html
@@ -24,22 +24,74 @@
         <p class="sub-title2">Most recent entries:</p>
       </section>
       <main class="content">
-      <section class="recent-videos">
-        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
-        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
-        <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
-      </section>
-      <section class="search">
-        <p class="sub-title2">Search for more recipes below:</p>
-        <div class="search-wrapper">
-          <form id="recipe-search">
-            <input type="text" name="recipe" placeholder="Search for a recipe">
-            <input type="submit" name="submit">
-          </form>
-        </div>
-      </section>
+        <section class="recents videos">
+          <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+          <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+          <img src="https://unsplash.it/200/134/?random&blur" alt="recent video 1">
+        </section>
+        <section class="search">
+          <p class="sub-title2">Search for more recipes:</p>
+          <div class="search-wrapper">
+            <form id="recipe-search">
+              <input type="text" name="recipe" placeholder="Search for a recipe">
+              <input type="submit" name="submit">
+            </form>
+          </div>
+          <p class="sub-title2 search-label">Videos</p>
+          <section class="videos">
+            <div class="recipe-video">
+              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
+              <p>Recipe result 1</p>
+            </div>
+            <div class="recipe-video">
+              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
+              <p>Recipe result 2</p>
+            </div>
+            <div class="recipe-video">
+              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
+              <p>Recipe result 3</p>
+            </div>
+          </section>
+          <div class="btn-wrapper">
+            <div class="btn-more">More Videos</div>
+          </div>          <p class="sub-title2 search-label">Directions</p>
+          <div class="directions">
+            <div class="dir-column">
+              <p>recipe directions 1</p>
+              <section class="ingredients">
+                <ul>
+                  <li>ingredient 1</li>
+                  <li>ingredient 2</li>
+                  <li>ingredient 3</li>
+                  <li>ingredient 4</li>
+                  <li>ingredient 5</li>
+                </ul>
+                <div><p><span>Paullum deliquit, ponderibus modulisque suis ratio utitur.</span> <span>Sed haec quis possit intrepidus aestimare tellus.</span> <span>Quae vero auctorem tractata ab fiducia dicuntur.</span> <span>Salutantibus vitae elit libero, a pharetra augue.</span> <span>Curabitur blandit tempus ardua ridiculus sed magna.</span></p><p><span>Quam diu etiam furor iste tuus nos eludet?</span> <span>Fabio vel iudice vincam, sunt in culpa qui officia.</span> <span>Gallia est omnis divisa in partes tres, quarum.</span> <span>Ullamco laboris nisi ut aliquid ex ea commodi consequat.</span> <span>Ut enim ad minim veniam, quis nostrud exercitation.</span></p></div>
+              </section>
+            </div>
+            <div class="dir-column">
+              <p>recipe directions 2</p>
+              <section class="ingredients">
+                <ul>
+                  <li>ingredient 1</li>
+                  <li>ingredient 2</li>
+                  <li>ingredient 3</li>
+                  <li>ingredient 4</li>
+                  <li>ingredient 5</li>
+                </ul>
+                <div><p><span>Morbi fringilla convallis sapien, id pulvinar odio volutpat.</span> <span>Curabitur blandit tempus ardua ridiculus sed magna.</span> <span>Ullamco laboris nisi ut aliquid ex ea commodi consequat.</span> <span>Ab illo tempore, ab est sed immemorabili.</span> <span>Prima luce, cum quibus mons aliud consensu ab eo.</span></p><p><span>Excepteur sint obcaecat cupiditat non proident culpa.</span> <span>Me non paenitet nullum festiviorem excogitasse ad hoc.</span> <span>Plura mihi bona sunt, inclinet, amari petere vellent.</span></p></div>
+              </section>
+            </div>
+          </div>
+          <div class="btn-wrapper">
+            <div class="btn-more">More Directions</div>
+          </div>
+        </section>
       </main>
     </article>
+    <footer>
+      <p>By Michael Reynolds</p>
+    </footer>
   </div>
 
   <script src="//code.jquery.com/jquery.min.js"></script>
