display search results, keep dry

--- a/index.html
+++ b/index.html
@@ -35,23 +35,12 @@
             </form>
           </div>
           <p class="sub-title2 search-label">Videos</p>
-          <section class="videos">
-            <div class="recipe-video">
-              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
-              <p>Recipe result 1</p>
-            </div>
-            <div class="recipe-video">
-              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
-              <p>Recipe result 2</p>
-            </div>
-            <div class="recipe-video">
-              <img src="https://unsplash.it/220/148/?random&blur" alt="recent video 1">
-              <p>Recipe result 3</p>
-            </div>
+          <section class="results videos">
           </section>
           <div class="btn-wrapper">
             <div class="btn-more">More Videos</div>
-          </div>          <p class="sub-title2 search-label">Directions</p>
+          </div>
+          <p class="sub-title2 search-label">Directions</p>
           <div class="directions">
             <div class="dir-column">
               <p>recipe directions 1</p>
