--- a/index.html
+++ b/index.html
@@ -1,54 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>recipe-tube</title>
-  <link href="//fonts.googleapis.com/css?family=Dancing+Script:400,700|EB+Garamond" rel="stylesheet" type="text/css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet" type="text/css">
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="compiled/css/style.css">
-</head>
-
-<body>
-  <nav>
-    <img class="logo" src="img/restaurant-cutlery.svg" alt="logo">
-    <h1 class="nav-title">Recipe-Tube!</h1>
-  </nav>
-  <div class="container">
-    <article>
-      <section class="info">
-        <h1>Discover Recipes</h1>
-        <p class="sub-title">With printed ingredients, instructions and video!</p>
-        <p class="sub-title2">Most recent entries:</p>
-      </section>
-      <main class="content">
-        <section class="recents videos">
-        </section>
-        <section class="search">
-          <p class="sub-title2">Search for more recipes:</p>
-          <div class="search-wrapper">
-            <form id="recipe-search">
-              <input type="text" name="recipe" placeholder="Search for a recipe">
-            </form>
-          </div>
-          <p class="sub-title2 search-label">Videos</p>
-          <section class="results videos">
-          </section>
-          <div class="btn-wrapper">
-            <div class="btn-more">More Videos</div>
-          </div>
-        </section>
-      </main>
-    </article>
-  </div>
-  <footer>
-    <p>By Michael Reynolds</p>
-  </footer>
-
-  <script src="//code.jquery.com/jquery.min.js"></script>
-  <script src="compiled/js/main.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Recipe Tube</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="compiled/css/style.css">
+  </head>
+  <body>
+    <nav class="wide">
+      <ul>
+        <li>
+          <img class="logo" src="img/restaurant-cutlery.svg" alt="logo">
+        </li>
+        <li>
+          <h3 class="nav-title white-text">Recipe-Tube!</h3>
+        </li>
+        <li class="search hide-on-small-only">
+          <input type="text" name="recipe" placeholder="Search for a recipe" class="white blue-text no-vrt-margin">
+        </li>
+      </ul>
+    </nav>
+    <nav class="grey darken-3 hide-on-med-and-up">
+      <ul class="sm-search-container">
+        <li class="search">
+          <input type="text" name="recipe" placeholder="Search for a recipe" class="white blue-text no-vrt-margin">
+        </li>
+      </ul>
+    </nav>
+  </body>
 </html>
