add recent recipes images

--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
         <input type="text" name="recipe" placeholder="Search for a recipe" class="white blue-text">
       </div>
     </nav>
+    <div class="wide row recent3">
+      <section class="recents videos"></section>
+    </div>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="compiled/js/main.js"></script>
   </body>
 </html>
