add captions to recent entries

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </li>
         </ul>
       </div>
-      <div id="sm-search-box" class="nav-row hide-on-med-and-up">
+      <div id="ssearch-box" class="nav-row hide-on-med-and-up">
         <input type="text" name="recipe" placeholder="Search for a recipe" class="white blue-text">
       </div>
     </nav>
-    <div class="wide row recent3">
-      <section class="recents videos"></section>
+    <div class="wide">
+      <section class="recents videos row"></section>
     </div>
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script src="compiled/js/main.js"></script>
