add icons and scrolling

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <div id="search-header" class="row grey lighten-2">
         <div class="center">
           <h5>Latest Recipe Videos</h5>
-          <span class="right">down</span>
+          <a href="#results-header"><i class="fa fa-arrow-circle-down brown-text"></i></a>
         </div>
       </div>
       <section class="recents videos row"></section>
       <div id="results-header" class="row">
         <div class="center grey lighten-2">
           <h5>Recipe Search Results</h5>
-          <span class="right">up</span>
+          <a href="#search-header"><i class="fa fa-arrow-circle-up brown-text"></i></a>
         </div>
       </div>
       <section class="results videos row"></section>
