--- a/index.html
+++ b/index.html
@@ -48,28 +48,23 @@
         </div>
       </div>
       <section class="results videos row"></section>
-      <div id="player-area" class="row">
+      <div id="player-area" class="row brown lighten-2 white-text hide">
         <div class="col s12 m8">
-          <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/cX4JeTg1070" frameborder="0" allowfullscreen></iframe>
-          </div>
+          <div class="video-wrapper"></div>
         </div>
-        <div class="col s12 m4">
-          <a class="twitter-timeline" href="https://twitter.com/search?q=recipe%20videos" data-widget-id="755176493664329729">
-            Tweets with recipe videos</a>
-          <script>!function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-            if (!d.getElementById(id)) {
-              js = d.createElement(s);
-              js.id = id;
-              js.src = p + "://platform.twitter.com/widgets.js";
-              fjs.parentNode.insertBefore(js, fjs);
-            }
-          }(document, "script", "twitter-wjs");</script>
+        <div class="directions-container col s12 m4">
+          <div class="row">
+            <div>Author: <span class="author"></span></div>
+            <div>Published: <span class="published"></span></div>
+          </div>
+          <div class="row">
+            <div>Directions:</div>
+            <p class="directions"></p></div>
         </div>
       </div>
     </div>
-    <script src="//code.jquery.com/jquery.min.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="compiled/js/main.js"></script>
   </body>
 </html>
