--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recipe Tube</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
@@ -48,23 +48,26 @@
         </div>
       </div>
       <section class="results videos row"></section>
-      <div id="player-area" class="row brown lighten-2 white-text hide">
-        <div class="col s12 m8">
-          <div class="video-wrapper"></div>
-        </div>
-        <div class="directions-container col s12 m4">
-          <div class="row">
-            <div>Author: <span class="author"></span></div>
-            <div>Published: <span class="published"></span></div>
+      <div id="player-area" class="row brown lighten-2 white-text modal">
+        <div class="modal-content">
+          <div class="col s12 l8">
+            <div class="video-wrapper"></div>
           </div>
-          <div class="row">
-            <div>Directions:</div>
-            <p class="directions"></p></div>
+          <div class="directions-container col s12 l4">
+            <div class="row">
+              <div>Author: <span class="author"></span></div>
+              <div>Published: <span class="published"></span></div>
+            </div>
+            <div class="row">
+              <div>Directions:</div>
+              <p class="directions"></p></div>
+          </div>
         </div>
       </div>
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="compiled/js/main.js"></script>
   </body>
 </html>
