--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         </div>
       </div>
       <section class="results videos row"></section>
+      <div class="btn-wrapper row">
+        <div class="btn-more col center m4 offset-m4 l2 s8 offset-s2 offset-l5 white-text text-darken-3 brown waves-circle hoverable hide">
+          More Videos
+        </div>
+      </div>
       <div id="player-area" class="row brown lighten-2 white-text modal">
         <div class="modal-content">
           <div class="col s12 l8">
@@ -55,17 +60,21 @@
           </div>
           <div class="directions-container col s12 l4">
             <div class="row">
-              <div>Author: <span class="author"></span></div>
-              <div>Published: <span class="published"></span></div>
+              <div>Author:
+                <span class="author"></span>
+              </div>
+              <div>Published:
+                <span class="published"></span>
+              </div>
             </div>
             <div class="row">
               <div>Directions:</div>
-              <p class="directions"></p></div>
+              <p class="directions"></p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="compiled/js/main.js"></script>
