fix in-page links and search form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div id="sm-search-box" class="nav-row hide-on-med-and-up">
         <form id="recipe-search-sm">
-          <input type="text" name="recipe" placeholder="Search for a recipe" class="white blue-text">
+          <input type="text" name="recipe-sm" placeholder="Search for a recipe" class="white blue-text">
         </form>
       </div>
     </nav>
@@ -44,7 +44,7 @@
       <div id="results-header" class="row">
         <div class="center grey lighten-2">
           <h5>Recipe Search Results</h5>
-          <a href="#search-header"><i class="fa fa-arrow-circle-up brown-text"></i></a>
+          <a href="#recipe-search"><i class="fa fa-arrow-circle-up brown-text"></i></a>
         </div>
       </div>
       <section class="results videos row"></section>
